UI: Fix vertical alignment of badge and close button in modal header

--- a/css/components/modals.css
+++ b/css/components/modals.css
@@ -35,7 +35,11 @@
     margin-bottom: 1.5rem;
 }
 .modal-header > div {
-    margin-top: 0.2rem;
+    margin-top: 0.35rem;
+}
+#modalTaskTime {
+    display: flex;
+    align-items: center;
 }
 .modal-header h2 {
     font-size: 1.7rem;
